--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="maintitle">
                     <img src="./image/1th.jpeg" class="titleImg"/>
                 </span>
-                <span class="smalltitle">项目</span>
+                <span class="smalltitle">项目+</span>
             </p>
 
          <a href="https://blog.rockshang.cn/#/login" target="_blank">
