--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
                 <span class="maintitle">
                     <img src="./image/1th.jpeg" class="titleImg"/>
                 </span>
-                <span class="smalltitle">项目+</span>
+                <span class="smalltitle">项目</span>
             </p>
 
-         <a href="https://blog.rockshang.cn/#/login" target="_blank">
+         <a href="https://s2265681.github.io/" target="_blank">
             <div class="block-info" >
                   <img src="http://img-home.7yue.pro/images/index/封面1.png" class="block-img"/>
                   <span class="block-title">
-                      博客项目（H5）
+                      个人博客
                   </span>
             </div>
         </a>
-        <a href="http://erp.rockshang.cn/#/login" target="_blank">
+        <a href="http://rockshang.cn" target="_blank">
             <div class="block-info" >
                   <img src="http://img-home.7yue.pro/images/index/封面4.png" class="block-img"/>
                   <span class="block-title">
-                      博客erp（PC版）
+                      个人主页（PC版请电脑打开）
                   </span>
             </div>
         </a>
